metadata/force-app/main/default/objects/ccrz__E_Subscriber_Page__c/fields/ccrz__BridgeAllowed__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BridgeAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this subscriber page is allowed to be loaded in a bridge page.</description>
    <label>BridgeAllowed</label>
    <type>Checkbox</type>
</CustomField>